--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.3.2",
-    "vite": "^2.5.4"
+    "typescript": "4.3.2",
+    "vite": "2.5.4"
   },
   "engines": {
     "node": ">=14.17.6"
